--- a/contact.css
+++ b/contact.css
@@ -8,15 +8,14 @@ body {
   overflow: hidden;
   font-size: 20px;
   color: #afcbff;
+  max-height: 5rem;
 }
 
 .logo {
   font-family: "Shrikhand", cursive;
   font-size: 1.2em;
-  display: inline-block;
+  float: left;
   padding: 14px 16px;
-  text-align: center;
-  outline: 5px white;
 }
 .nav a {
   float: left;
@@ -41,6 +40,7 @@ input[type="text"] {
   margin: 5px 0;
   border-color: #ffffd1;
   border-radius: 4px;
+  padding: 10px;
 }
 
 select {
@@ -48,6 +48,7 @@ select {
   border: none;
   border-radius: 4px;
   background-color: #ffffd1;
+  padding: 10px;
 }
 
 textarea {
