--- a/menu.css
+++ b/menu.css
@@ -10,6 +10,7 @@ body {
   font-size: 20px;
   color: #afcbff;
   max-height: 5rem;
+  padding: 0;
 }
 
 .logo {
@@ -108,6 +109,7 @@ body {
 }
 
 .footer {
+  /*footer background*/
   padding: 10px 0;
   background-color: #f3ffe3;
   display: flex;
@@ -118,7 +120,7 @@ li {
   display: inline-block;
   margin: 0 5px;
 }
-
+/*how the icons look*/
 .icons a {
   margin-right: 0;
   color: #afcbff;
