Changed submit button font color

--- a/contact.css
+++ b/contact.css
@@ -67,6 +67,7 @@ textarea {
 
 input[type="submit"] {
   background-color: #ffffd1;
+  color: #afcbff;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
