--- a/deals.css
+++ b/deals.css
@@ -28,6 +28,21 @@ body {
   font-size: 18px;
 }
 
+header {
+  font-family: "Shrikhand", cursive;
+  color: #afcbff;
+  -webkit-text-stroke: 1px #fbe4ff;
+  background-color: #f3ffe3;
+  font-size: 1.3rem;
+  text-align: center;
+}
+
+.deals {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .coupon {
   border: 5px dotted #afcbff;
   width: 80%;
@@ -52,6 +67,14 @@ h2 {
   background-color: #fbe4ff;
 }
 
+img {
+  max-width: 15rem;
+  max-height: 16rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .promo {
   background-color: #f3ffe3;
   font-size: 1.2rem;
@@ -61,7 +84,7 @@ h2 {
   color: #ffabab;
 }
 
-.footer {
+footer {
   /*footer background*/
   padding: 10px 0;
   background-color: #fbe4ff;
