--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ input[type="submit"] {
   text-decoration: none;
 }
 
-.footer {
+footer {
   /*footer background*/
   padding: 10px 0;
   background-color: #fff5ed;
