--- a/menu.css
+++ b/menu.css
@@ -29,12 +29,13 @@ body {
   font-size: 18px;
 }
 
-.section {
-  font-family: "Jost", sans-serif;
+main {
+  font-family: "Shrikhand", cursive;
   text-align: center;
   font-size: 2rem;
   vertical-align: top;
   color: #f3ffe3;
+  -webkit-text-stroke: 1px #ececec;
   background-color: #afcbff;
   padding: auto;
   max-height: fit-content;
@@ -59,7 +60,7 @@ body {
   width: 100vw;
 }
 
-.steps {
+header {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -81,7 +82,7 @@ body {
   text-align: center;
 }
 
-.menu_row {
+section {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -91,24 +92,26 @@ body {
   width: 100vw;
 }
 
-.image {
-  max-width: 150px;
-  padding: 0 10px;
+figure {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+img {
+  width: 150px;
   height: 150px;
+  padding: 0 10px;
 }
 
-.image img {
-  width: 100%;
-  height: 100%;
-}
-
-.item_info {
+figcaption {
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
   color: #7f7f7f;
+  font-family: "Jost", sans-serif;
 }
 
-.footer {
+footer {
   /*footer background*/
   padding: 10px 0;
   background-color: #f3ffe3;
