Updated sematic html on all pages and added headers to contact, deals, and menu pages

--- a/contact.css
+++ b/contact.css
@@ -27,6 +27,15 @@ body {
   font-size: 18px;
 }
 
+header {
+  font-family: "Shrikhand", cursive;
+  color: #ffffd1;
+  -webkit-text-stroke: 1px #afcbff;
+  background-color: white;
+  font-size: 1.3rem;
+  text-align: center;
+}
+
 h2 {
   font-size: 20px;
 }
