--- a/contact.css
+++ b/contact.css
@@ -36,28 +36,25 @@ header {
   text-align: center;
 }
 
-h2 {
+label {
+  font-family: "Jost", sans-serif;
   font-size: 20px;
 }
 
-label {
-  font-family: "Jost", sans-serif;
-}
-
 input[type="text"] {
-  width: 50%;
   margin: 5px 0;
   border-color: #ffffd1;
   border-radius: 4px;
-  padding: 10px;
+  width: 50%;
+  height: 2rem;
 }
 
 select {
-  width: 50%;
   border: none;
   border-radius: 4px;
   background-color: #ffffd1;
-  padding: 10px;
+  width: 50%;
+  height: 2rem;
 }
 
 textarea {
