--- a/index.css
+++ b/index.css
@@ -4,10 +4,10 @@ body {
 }
 
 .nav {
-  background-color: #fff5ed;
+  background-color: #fffcfa;
   overflow: hidden;
   font-size: 20px;
-  color: #afcbff;
+  color: #1a6aff;
   max-height: 5rem;
 }
 
@@ -19,7 +19,7 @@ body {
 }
 .nav a {
   float: left;
-  color: #afcbff;
+  color: #1a6aff;
   font-family: "Jost", sans-serif;
   text-align: center;
   padding: 14px;
@@ -41,26 +41,26 @@ body {
 }
 
 .hero-title {
-  color: #fff5ed;
+  color: #fffcfa;
   font-size: 5em;
   -webkit-text-stroke: 1px white;
 }
 
 .hero-subtitle {
   font-size: 20px;
-  color: #7f7f7f;
+  color: #2b2b2b;
   font-weight: bold;
 }
 
 input[type="submit"] {
-  background-color: #fff5ed;
+  background-color: #fffcfa;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-family: "Jost", sans-serif;
   font-size: 25px;
-  color: #afcbff;
+  color: #1a6aff;
   text-align: center;
   text-decoration: none;
 }
@@ -68,7 +68,7 @@ input[type="submit"] {
 footer {
   /*footer background*/
   padding: 10px 0;
-  background-color: #fff5ed;
+  background-color: #fffcfa;
   display: flex;
   align-items: center;
 }
@@ -80,7 +80,7 @@ li {
 /*how the icons look*/
 .icons a {
   margin-right: 0;
-  color: #afcbff;
+  color: #1a6aff;
   font-size: 15px;
   display: flex;
   align-content: center;
