--- a/deals.css
+++ b/deals.css
@@ -43,7 +43,7 @@ header {
   justify-content: center;
 }
 
-.coupon {
+section {
   border: 5px dotted #1a6aff;
   border-radius: 15px;
   margin: 0 auto;
@@ -67,15 +67,15 @@ h2 {
 }
 
 img {
-  max-width: 15rem;
-  max-height: 16rem;
+  width: 15rem;
+  height: 15rem;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 mark {
-  background-color: #96ff2e;
+  background-color: #ffffd1;
   font-size: 1.2rem;
 }
 
